--- a/creditos.css
+++ b/creditos.css
@@ -7,16 +7,12 @@ h1{
     font-family: "Big Shoulders Stencil", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    font-size: 5rem;
+    font-size: 3rem;
     font-style: normal;
     color: white;
     padding: 0.1rem;
     margin: 0.1rem;
-}
-
-
-h2{
-    color: rgb(55, 227, 7);
+    margin-bottom: 1.5rem;
 }
 
 p, ul, li{
@@ -26,8 +22,8 @@ p, ul, li{
 a{
     font-size: 2rem;
     text-decoration: none;
-    color: white;
-    padding: 0.3rem;
+    color: #ffcc00;
+    padding: 0.5rem;
 }
 
 body {
@@ -37,76 +33,59 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
-    background-image: url("Tela\ Credito.png");
+    background-image: url("TelaCredito.png");
     background-size: cover;
     background-repeat: no-repeat;
     flex: 1;
     height: 10rem;
 }
 
+.container {
+    width: 90%;
+    max-width: 60rem;
+    background: rgba(0, 0, 0, 0.222);
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 1rem rgba(35, 5, 5, 0.2);
+}
+
+.credit-section {
+    margin-bottom: 1.5rem;
+}
+
+.credit-section h2 {
+    font-size: 1.8rem;
+    color: #ffcc00;
+}
+
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+ul li {
+    font-size: 1.7rem;
+    margin: 0.5rem 0;
+}
 
 .img-wpp {
     padding: -10rem;
     width: 4rem;
 }
 
-.glow-on-hover {
-    width: 22rem;
-    height: 5rem;
-    border: none;
-    outline: none;
-    color: #fff;
-    background: #111;
-    cursor: pointer;
-    position: relative;
-    z-index: 2;
-    border-radius: 1rem;
+.back-button {
+    display: inline-block;
+    margin-top: 1.5rem;
+    padding: 10px 20px;
+    background: #ffcc00;
+    color: black;
     font-weight: bold;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: 0.3s;
 }
 
-.glow-on-hover:before {
-    content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-    position: absolute;
-    top: -0.2rem;
-    left:-0.2rem;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(0.5rem);
-    width: calc(100% + 0.4rem);
-    height: calc(100% + 0.4rem);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 1rem;
-}
-
-.glow-on-hover:active {
-    color: #000
-}
-
-.glow-on-hover:active:after {
-    background: white;
-}
-
-.glow-on-hover:hover:before {
-    opacity: 1;
-}
-
-.glow-on-hover:after {
-    z-index: -2;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 1rem;
-}
-
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
+.back-button:hover {
+    background: #ffaa00;
 }
