--- a/menu.css
+++ b/menu.css
@@ -25,7 +25,7 @@ body {
     font-size: 1.8rem;
     line-height: 1.4;
     text-align: center;
-    background-image: url("../img/TelaMenu.png");
+    background-image: url("Backg.png");
     background-size: cover;
     background-repeat: no-repeat;
     flex: 1;
